code profile and element

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page">
 
-    <header class="header">
+    <header class="header section-width">
         
         <img class = "header__vector"  src = "./images/Vector.png" alt = "Around Vector">
  
@@ -19,9 +19,76 @@
 
     <main>
 
-    <section class="profile"></section>
+    <section class="profile section-width">
 
-    <section class="elements"></section>
+        <div class = "avatar">
+        <img class = "avatar__image" src = "images/Jaques.jpg" alt = "Jaques Couteau">
+        </div>
+
+        <div class = "info">
+            <div class = "info__first-line">
+            <h1 class = "info__name">Jacques Cousteau</h1>
+            <div class = "info__edit-button"><img class ="info__button-image" src = "images/pencil.png" alt = "Pencil"></div>
+            </div>
+            <p class = "info__description">Explorer</p>
+
+        </div>
+
+        <div class = "info__add-button"><img class = "info__add-button-symbol" src = "./images/Plus sign.png" alt = "Plus Sign"></div>
+
+    </section>
+
+    <section class="elements section-width">
+
+        <div class = "element">
+            <img class = "element__image" src = "./images/Yosemite.jpg" alt = "Yosemite">
+            <div class = "element__bar">
+            <p class = "element__name">Yosemite Valley</p>
+            <img class = "element__heart-icon" src = "./images/heart.jpg" alt = "Heart icon">
+        </div>
+        </div>
+
+        <div class = "element">
+            <img class = "element__image" src = "./images/Lake Louise.png" alt = "Lake Louise">
+            <div class = "element__bar">
+            <p class = "element__name">Lake Louise</p>
+            <img class = "element__heart-icon" src = "./images/heart.jpg" alt = "Heart icon">
+        </div>
+        </div>
+
+        <div class = "element">
+            <img class = "element__image" src = "./images/Bald Mountains.png" alt = "Bald Mountains">
+            <div class = "element__bar">
+            <p class = "element__name">Bald Mountains</p>
+            <img class = "element__heart-icon" src = "./images/heart.jpg" alt = "Heart icon">
+        </div>
+        </div>
+
+        <div class = "element">
+            <img class = "element__image" src = "./images/Latemar.png" alt = "Latemar">
+            <div class = "element__bar">
+            <p class = "element__name">Latemar</p>
+            <img class = "element__heart-icon" src = "./images/heart.jpg" alt = "Heart icon">
+        </div>
+        </div>
+
+        <div class = "element">
+            <img class = "element__image" src = "./images/Vanois National Park.png" alt = "Vanois">
+            <div class = "element__bar">
+            <p class = "element__name">Vanois National</p>
+            <img class = "element__heart-icon" src = "./images/heart.jpg" alt = "Heart icon">
+        </div>
+        </div>
+
+        <div class = "element">
+            <img class = "element__image" src = "./images/Lago di Braies.png" alt = "Lago di Braies">
+            <div class = "element__bar">
+            <p class = "element__name">Lago di Braies</p>
+            <img class = "element__heart-icon" src = "./images/heart.jpg" alt = "Heart icon">
+        </div>
+        </div>
+
+    </section>
 
     </main>
 
