--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <form class = "form__container">
 
             <h2 class = "form__title">Edit profile</h2>
-            <input class = "form__name" type = "text" id = "name" name = "name" value = "Jacques Cousteau">
-            <input class = "form__description" type = "text" id = "description" name = "description" value = "Explorer">
-            <button class = "form__save-button" type = "submit">Save</button>
-            <img class = "form__close-button" src = "./images/Close Icon.png" alt = "Close X">
+            <input class = "form__name" type = "text" id = "name" name = "name" value ="" placeholder ="Jacques Cousteau">
+            <input class = "form__description" type = "text" id = "description" name = "description" value = "" placeholder = "Explorer">
+            <button class = "form__save-button" type = "submit" onclick = "formSave()">Save</button>
+            <img class = "form__close-button" onclick = "formHide()" src = "./images/Close Icon.png" alt = "Close X">
 
         </form>
 
@@ -35,6 +35,7 @@
 
     <section class="profile section-width">
 
+        <div class = "profile__section">
         <div class = "avatar">
         <img class = "avatar__image" src = "images/Jaques.jpg" alt = "Jaques Couteau">
         </div>
@@ -42,11 +43,13 @@
         <div class = "info">
             <div class = "info__first-line">
             <h1 class = "info__name">Jacques Cousteau</h1>
-            <div class = "info__edit-button hover" onclick = "formshow()"><img class ="info__button-image" src = "images/pencil.png" alt = "Pencil"></div>
+            <div class = "info__edit-button hover" onclick = "formShow()"><img class ="info__button-image" src = "images/pencil.png" alt = "Pencil"></div>
             </div>
             <p class = "info__description">Explorer</p>
 
         </div>
+        </div>
+
 
         <div class = "info__add-button hover"><img class = "info__add-button-symbol" src = "./images/Plus sign.png" alt = "Plus Sign"></div>
 
