--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <footer class="footer section-width">
 
-        <img class = "footer__trademark" src = "./images/© 2020 Around The U.S. (1).png" alt = "Trademark">
+        <img class = "footer__trademark" src = "./images/footer.png" alt = "Trademark">
 
     </footer>
 
