change img to background-img

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
 
          <section class="profile section-width"> 
-<!--I need this wrapper to use space-between to move my add-button to the right side of the profile div - this was the best way I could figure out to do it. If I eliminate the wrapper my layout is wrong-->
+
         <div class = "profile__section">
        
         <img class = "profile__avatar" src = "images/Jaques.jpg" alt = "Jaques Couteau">
@@ -47,7 +47,7 @@
     <section class="elements section-width">
 
         <div class = "elements__element">
-            <img class = "elements__image" src = "./images/Yosemite.jpg" alt = "Yosemite">
+            <div class = "elements__image" style = "background-image:url('./images/Yosemite.jpg');" alt = "Yosemite"> </div>
             <div class = "elements__bar">
             <p class = "elements__name">Yosemite Valley</p>
             <button class = "elements__heart-icon hover"></button>
@@ -55,7 +55,7 @@
         </div>
 
         <div class = "elements__element">
-            <img class = "elements__image" src = "./images/LakeLouise.png" alt = "Lake Louise">
+            <div class = "elements__image" style = "background-image:url('./images/LakeLouise.png');" alt = "Lake Louise"> </div>
             <div class = "elements__bar">
             <p class = "elements__name">Lake Louise</p>
             <button class = "elements__heart-icon hover"></button>
@@ -63,7 +63,7 @@
         </div>
 
         <div class = "elements__element">
-            <img class = "elements__image" src = "./images/BaldMountains.png" alt = "Bald Mountains">
+            <div class = "elements__image" style = "background-image:url('./images/BaldMountains.png');" alt = "Bald Mountains"> </div>
             <div class = "elements__bar">
             <p class = "elements__name">Bald Mountains</p>
             <button class = "elements__heart-icon hover"></button>
@@ -71,7 +71,7 @@
         </div>
 
         <div class = "elements__element">
-            <img class = "elements__image" src = "./images/Latemar.png" alt = "Latemar">
+            <div class = "elements__image" style = "background-image:url('./images/Latemar.png');" alt = "Latemar"> </div>
             <div class = "elements__bar">
             <p class = "elements__name">Latemar</p>
             <button class = "elements__heart-icon hover"></button>
@@ -79,7 +79,7 @@
         </div>
 
         <div class = "elements__element">
-            <img class = "elements__image" src = "./images/VanoisNationalPark.png" alt = "Vanois">
+            <div class = "elements__image" style = "background-image:url('./images/VanoisNationalPark.png');" alt = "Vanois"> </div>
             <div class = "elements__bar">
             <p class = "elements__name">Vanois National</p>
             <button class = "elements__heart-icon hover"></button>
@@ -87,7 +87,7 @@
         </div>
 
         <div class = "elements__element">
-            <img class = "elements__image" src = "./images/LagodiBraies.png" alt = "Lago di Braies">
+            <div class = "elements__image" style = "background-image:url('./images/LagodiBraies.png');" alt = "Lago di Braies"> </div>
             <div class = "elements__bar">
             <p class = "elements__name">Lago di Braies</p>
             <button class = "elements__heart-icon hover"></button>
