code add button - not yet working - card disappearing

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
     
     </section>
 
-    <section class = "form">
+
+ 
+
+    <section class = "form form_type_edit-profile">
 
         <div class = "form__overlay"></div>
         <form class = "form__container">
@@ -63,6 +66,22 @@
         </form>
 
     </section>
+
+    <section class = "form form_type_add-card">
+
+        <div class = "form__overlay"></div>
+        <form class = "form__container">
+
+            <h2 class = "form__title">New Place</h2>
+            <input class = "form__name" type = "text" id = "title" name = "title" value ="" placeholder ="Title">
+            <input class = "form__description" type = "url" id = "url" name = "url" value = "" placeholder = "Image link">
+            <button class = "form__save-button" type = "submit">Create</button>
+            <button class = "form__close-button hover"></button>
+
+        </form>
+
+    </section>
+
 
     </main>
 
