partially code trash and image

--- a/index.html
+++ b/index.html
@@ -82,6 +82,22 @@
 
     </section>
 
+    <section class = "form form_type_image">
+
+        <div class = "form__overlay"></div>
+        <form class = "form__container form__container_type_image">
+
+            <figure class = "big-image"> 
+                <img class = "big-image__picture" src = "./images/LakeLouise.png">
+                <figcaption class = "big-image__caption">
+
+                </figcaption>
+            </figure>
+
+            <button class = "form__close-button hover"></button>
+        </form>
+
+    </section>
 
     </main>
 
