code like button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h2 class = "form__title">New Place</h2>
             <input class = "form__name" type = "text" id = "title" name = "title" value ="" placeholder ="Title">
             <input class = "form__description" type = "url" id = "url" name = "url" value = "" placeholder = "Image link">
-            <button class = "form__save-button" type = "submit">Create</button>
+            <button class = "form__save-button" type = "submit">Save</button>
             <button class = "form__close-button hover"></button>
 
         </form>
@@ -88,7 +88,7 @@
         <form class = "form__container form__container_type_image">
 
             <figure class = "big-image"> 
-                <img class = "big-image__picture" src = "./images/LakeLouise.png">
+                <img class = "big-image__picture" src = >
                 <figcaption class = "big-image__caption">
 
                 </figcaption>
@@ -112,7 +112,7 @@
             <div class = "elements__image"> <button class = "elements__trash-icon hover"></button> </div>
             <div class = "elements__bar">
             <p class = "elements__name"></p>
-            <button class = "elements__heart-icon hover"></button>
+            <button class = "elements__heart-icon elements__heart-icon_theme_dark hover"></button>
             
         </div>
         </div>
