fix edit profile button

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <form class = "form__container">
 
             <h2 class = "form__title">Edit profile</h2>
-            <input class = "form__name" type = "text" id = "name" name = "name" value ="" placeholder ="Name">
-            <input class = "form__description" type = "text" id = "description" name = "description" value = "" placeholder = "About Me">
+            <input class = "form__name form__name-profile" type = "text" id = "name" name = "name" value ="" placeholder ="Name">
+            <input class = "form__description form__description-profile" type = "text" id = "description" name = "description" value = "" placeholder = "About Me">
             <button class = "form__save-button" type = "submit">Save</button>
             <button class = "form__close-button hover"></button>
 
@@ -73,9 +73,9 @@
         <form class = "form__container">
 
             <h2 class = "form__title">New Place</h2>
-            <input class = "form__name" type = "text" id = "title" name = "title" value ="" placeholder ="Title">
-            <input class = "form__description" type = "url" id = "url" name = "url" value = "" placeholder = "Image link">
-            <button class = "form__save-button" type = "submit">Save</button>
+            <input class = "form__name form__name-card" type = "text" id = "title" name = "title" value ="" placeholder ="Title">
+            <input class = "form__description form__description-card" type = "url" id = "url" name = "url" value = "" placeholder = "Image link">
+            <button class = "form__save-button form__card-save-button" type = "submit">Save</button>
             <button class = "form__close-button hover"></button>
 
         </form>
