fix image popup

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 
     </section>
 
-    
-
+ 
     <section class="elements section-width">
     <ul>
         
@@ -90,7 +89,7 @@
         <form class = "form__container form__container_type_image">
 
             <figure class = "big-image"> 
-                <img class = "big-image__picture" src = >
+                <img class = "big-image__picture" src = "">
                 <figcaption class = "big-image__caption">
 
                 </figcaption>
