fix css issues in code review

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2 class = "form__title">Edit profile</h2>
             <input class = "form__name form__name-profile" type = "text" id = "name" name = "name" value ="" placeholder ="Name">
             <input class = "form__description form__description-profile" type = "text" id = "description" name = "description" value = "" placeholder = "About Me">
-            <button class = "form__save-button" type = "submit">Save</button>
+            <button class = "form__save-button hover" type = "submit">Save</button>
             <button class = "form__close-button hover"></button>
 
         </form>
@@ -76,7 +76,7 @@
             <h2 class = "form__title">New Place</h2>
             <input class = "form__name form__name-card" type = "text" id = "title" name = "title" value ="" placeholder ="Title">
             <input class = "form__description form__description-card" type = "url" id = "url" name = "url" value = "" placeholder = "Image link">
-            <button class = "form__save-button form__card-save-button" type = "submit">Save</button>
+            <button class = "form__save-button form__card-save-button hover" type = "submit">Save</button>
             <button class = "form__close-button hover"></button>
 
         </form>
@@ -95,7 +95,7 @@
                 </figcaption>
             </figure>
 
-            <button class = "form__close-button hover"></button>
+            <button class = "form__close-button form__close-button_type_image hover"></button>
         </form>
 
     </section>
