--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
     </section>
 
-    <section class = "form form_type_edit-profile">
+    <section class = "form form_is-opened form_type_edit-profile">
 
         <div class = "form__overlay"></div>
         <form class = "form__container">
@@ -60,7 +60,7 @@
 
     </section>
 
-    <section class = "form form_type_add-card">
+    <section class = "form form_is-opened form_type_add-card">
 
         <div class = "form__overlay"></div>
         <form class = "form__container">
@@ -75,7 +75,7 @@
 
     </section>
 
-    <section class = "form form_type_image">
+    <section class = "form form_is-opened form_type_image">
 
         <div class = "form__overlay"></div>
         <form class = "form__container form__container_type_image">
@@ -111,7 +111,7 @@
     </li>
     </template>
 
-    <script src = "./script.js"></script>
+    <script src = "./scripts/index.js"></script>
 
 </body>
 </html>
