fix layout for mobile even more

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <section class = "form form_is-opened form_type_image">
 
-        <div class = "form__overlay"></div>
+        <div class = "form__overlay form__overlay_type_dark"></div>
         <form class = "form__container form__container_type_image">
 
             <figure class = "big-image"> 
