fix hover name and opacity

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h2 class = "form__title">New Place</h2>
             <input class = "form__name form__name-card" type = "text" id = "title" name = "title" value ="" placeholder ="Title">
             <input class = "form__description form__description-card" type = "url" id = "url" name = "url" value = "" placeholder = "Image link">
-            <button class = "form__save-button form__card-save-button hover" type = "submit">Create</button>
+            <button class = "form__save-button form__card-save-button hover hover_type_dark" type = "submit">Create</button>
             <button class = "form__close-button hover"></button>
 
         </form>
