fix elements class

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     </section>
 
-    <section class="elements section-width">
-    <ul>
+    <section class="section-width">
+    <ul class = "elements">
   
     </ul>
     
