fix toggle of heart icon

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class = "elements__image">  </div>
             <div class = "elements__bar">
             <p class = "elements__name"></p>
-            <button class = "elements__heart-icon elements__heart-icon_theme_dark hover"></button>
+            <button class = "elements__heart-icon hover"></button>
         </div>
     </li>
     </template>
