--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <form class = "form__container">
 
             <h2 class = "form__title">Edit profile</h2>
-            <input class = "form__name form__name-profile" type = "text" id = "name" name = "name" value ="" placeholder ="Name">
-            <input class = "form__description form__description-profile" type = "text" id = "description" name = "description" value = "" placeholder = "About Me">
+            <input class = "form__name form__name-profile" type = "text" id = "name" name = "name" placeholder ="Name">
+            <input class = "form__description form__description-profile" type = "text" id = "description" name = "description" placeholder = "About Me">
             <button class = "form__save-button hover" type = "submit">Save</button>
             <button class = "form__close-button hover"></button>
 
@@ -66,8 +66,8 @@
         <form class = "form__container">
 
             <h2 class = "form__title">New Place</h2>
-            <input class = "form__name form__name-card" type = "text" id = "title" name = "title" value ="" placeholder ="Title">
-            <input class = "form__description form__description-card" type = "url" id = "url" name = "url" value = "" placeholder = "Image link">
+            <input class = "form__name form__name-card" type = "text" id = "title" name = "title" placeholder ="Title">
+            <input class = "form__description form__description-card" type = "url" id = "url" name = "url" placeholder = "Image link">
             <button class = "form__save-button form__card-save-button hover hover_type_dark" type = "submit">Create</button>
             <button class = "form__close-button hover"></button>
 
