--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 
         <h2 class = "form__title">Edit profile</h2>
         <input class = "form__name form__name-profile form__input" type = "text" id = "name" name = "name" placeholder ="Name" minlength = "2" maxlength = "40" required>
-        <label for = "name">Test</label>
+        <span id ="name-error" class = "form__input-error"></span>
         <input class = "form__description form__description-profile form__input" type = "text" id = "description" name = "description" placeholder = "About Me" minlength = "2" maxlength = "200" required>
+        <span id ="description-error" class = "form__input-error"></span>
         <button class = "form__save-button hover hover_type_dark" type = "submit">Save</button>
         <button class = "form__close-button hover"></button>
 
@@ -67,7 +68,9 @@
 
         <h2 class = "form__title">New Place</h2>
         <input class = "form__name form__name-card form__input" type = "text" id = "title" name = "title" placeholder ="Title">
+        <span id ="title-error" class = "form__input-error"></span>
         <input class = "form__description form__description-card form__input" type = "url" id = "url" name = "url" placeholder = "Image link">
+        <span id ="url-error" class = "form__input-error"></span>
         <button class = "form__save-button form__card-save-button hover hover_type_dark" type = "submit">Create</button>
         <button class = "form__close-button hover"></button>
 
