add toggle state button - still has errors - button does not disable

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     
     </section>
 
-    <section class = "form form_type_edit-profile">
+    <section class = "form form_type_edit-profile form-with-button">
         <!--separate div for overlay to allow for different opacities for form and overlay-->
       <div class = "form__overlay"></div>
       <form class = "form__container" name = "profileForm" novalidate>
@@ -61,7 +61,7 @@
 
     </section>
 
-    <section class = "form form_type_add-card">
+    <section class = "form form_type_add-card form-with-button">
 
       <div class = "form__overlay"></div>
       <form class = "form__container">
