--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </template>
 
     <script src = "./scripts/index.js"></script>
-    <script src = "./scripts/validate2.js"></script>
+    <script src = "./scripts/validate.js"></script>
 
 </body>
 </html>
