--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     </template>
 
     <script type = "module" src = "./scripts/index.js"></script>
-    <script type = "module" src = "./scripts/FormValidator.js"></script>
-    <script type = "module" src = "./scripts/card.js"></script>
+   <!-- <script type = "module" src = "./scripts/FormValidator.js"></script> 
+    <script type = "module" src = "./scripts/card.js"></script> -->
 
 </body>
 </html>
