--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
       </li>
     </template>
 
-    <script type = "module" src = "./scripts/index.js"></script>
+    <script type = "module" src = "./index.js"></script>
    <!-- <script type = "module" src = "./scripts/FormValidator.js"></script> 
     <script type = "module" src = "./scripts/card.js"></script> -->
 
