--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "./pages/index.css">
+    <!--<link rel = "stylesheet" href = "./pages/index.css">-->
     <title>Around the U.S.</title>
     
     
@@ -115,9 +115,7 @@
       </li>
     </template>
 
-    <script type = "module" src = "./index.js"></script>
-   <!-- <script type = "module" src = "./scripts/FormValidator.js"></script> 
-    <script type = "module" src = "./scripts/card.js"></script> -->
+   <!-- <script type = "module" src = "./index.js"></script> -->
 
 </body>
 </html>
