coded like button

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       <div class = "profile__section">
        
         <div class = "avatar">        
-        <img class = "profile__avatar" src = "images/Jaques.jpg" alt = "My avatar">
+        <img class = "profile__avatar" alt = "My avatar">
         <img class = "hover_type_edit" src = "images/EditAvatarIcon.png" alt = "edit icon">
       </div>
         <div class = "profile__info">
@@ -143,7 +143,10 @@
         <div class = "elements__image"></div>
         <div class = "elements__bar">
           <p class = "elements__name"></p>
+          <div class = "elements__like-section">
           <button class = "elements__heart-icon hover"></button>
+          <p class = "elements__like-count"></p>
+        </div>
         </div>
       </li>
     </template>
