--- a/src/index.html
+++ b/src/index.html
@@ -101,8 +101,8 @@
       <form class = "form__container">
 
         <h2 class = "form__title">Change profile picture</h2>
-        <input class = "form__description form__description-card form__input" type = "url" id = "url" name = "url" placeholder = "Image link" required>
-        <span id ="url-error" class = "form__input-error"></span>
+        <input class = "form__description form__description-card form__input" type = "url" id = "urlAvatar" name = "url" placeholder = "Image link" required>
+        <span id ="urlAvatar-error" class = "form__input-error"></span>
         <button class = "form__save-button form__avatar-confirm hover hover_type_dark" type = "submit">Save</button>
         <button class = "form__close-button hover"></button>
 
@@ -117,8 +117,8 @@
 
         <figure class = "big-image">
 
-          <img class = "big-image__picture" alt = "card image" id = "bigImage" name = "bigImage">
-          <figcaption class = "big-image__caption" id = "caption" name = "caption"></figcaption>
+          <img class = "big-image__picture" alt = "card image" id = "bigImage">
+          <figcaption class = "big-image__caption" id = "caption"></figcaption>
             
         </figure>
 
